# Spotify-Manager

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
dags/: dag_hello_world.py  dag_new_year_playlist.py  dag_test.py  spotify_auth.py
docker/: airflow.Dockerfile  generate_image.sh
